--- a/src/sass/blocks/_btn.scss
+++ b/src/sass/blocks/_btn.scss
@@ -14,6 +14,7 @@
     &-clear {
         background: none;
         border: 1px solid rgba(255, 255, 255, 0.5);
+        transition: all 0.7s;
         &:hover {
             background: #E8C300;
         }
